--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -435,6 +435,19 @@
 	Year = {2008}
 }
 
+@article{Chen10,
+  author  = {Tsong Yueh Chen and Fei-Ching Kuo and Robert G. Merkel and T. H. Tse},
+  title   = {Adaptive Random Testing: The ART of Test Case Diversity},
+  journal = {Journal of Systems and Software},
+  volume  = {83},
+  number  = {1},
+  pages   = {60--66},
+  year    = {2010},
+  doi     = {10.1016/j.jss.2009.02.022},
+  url     = {https://doi.org/10.1016/j.jss.2009.02.022}
+}
+
+
 @inproceedings{Claessen:2000,
 	Acmid = {351266},
 	Address = {New York, NY, USA},
@@ -468,6 +481,20 @@
   howpublished  = {\url{http://jgap.sourceforge.net}},
   date-added    = {2018-11-20 04:22:28 +0000},
   date-modified = {2018-11-20 04:27:36 +0000},
+}
+
+@article{Li18,
+  author       = {Jun Li and Bodong Zhao and Chao Zhang},
+  title        = {Fuzzing: a survey},
+  journal      = {Cybersecurity},
+  volume       = {1},
+  number       = {1},
+  articleno    = {6},
+  pages        = {6},
+  year         = {2018},
+  publisher    = {SpringerOpen},
+  doi          = {10.1186/s42400-018-0002-y},
+  url          = {https://doi.org/10.1186/s42400-018-0002-y}
 }
 
 @InProceedings{Huang:2012,
@@ -1067,6 +1094,30 @@ keywords = {metamorphic relation, test case generation, Metamorphic testing, ora
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/conf/icse/PachecoLEB07.bib},
   timestamp = {Wed, 16 Oct 2019 14:14:49 +0200},
+}
+
+@inproceedings{Ramler12,
+  author    = {Rudolf Ramler and Dietmar Winkler and Martina Schmidt},
+  title     = {Random Test Case Generation and Manual Unit Testing: Substitute or Complement in Retrofitting Tests for Legacy Code?},
+  booktitle = {2012 38th EUROMICRO Conference on Software Engineering and Advanced Applications (SEAA)},
+  pages     = {286--293},
+  address   = {Cesme, Izmir, Turkey},
+  year      = {2012},
+  publisher = {IEEE},
+  doi       = {10.1109/SEAA.2012.42},
+  url       = {https://doi.org/10.1109/SEAA.2012.42}
+}
+
+@inproceedings{Shamshiri15,
+  author    = {Saeed Shamshiri and Jos{\'e} Miguel Rojas and Gordon Fraser and Phil McMinn},
+  title     = {Random or Genetic Algorithm Search for Object-Oriented Test Suite Generation?},
+  booktitle = {Proceedings of the 2015 Annual Conference on Genetic and Evolutionary Computation (GECCO '15)},
+  pages     = {1367--1374},
+  address   = {Madrid, Spain},
+  year      = {2015},
+  publisher = {ACM},
+  doi       = {10.1145/2739480.2754696},
+  url       = {https://doi.org/10.1145/2739480.2754696}
 }
 
 @InProceedings{Cadar08,
